--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,16 +4,25 @@ on:
   push:
     branches:
       - main
+  workflow_dispatch:
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
-      - run: npm i pnpm -g
+          node-version: 20
+          cache: pnpm
+
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 8
+
       - run: pnpm install --frozen-lockfile
 
       - name: Build
